--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.1.3"
 django-restframework = "^0.0.1"
+black = "^24.10.0"
+isort = "^5.13.2"
+mypy = "^1.13.0"
+django-stubs = "^5.1.1"
+psycopg2 = "^2.9.10"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -19,3 +24,25 @@ isort = "^5.13.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
+
+[tool.mypy]
+plugins = ["mypy_django_plugin.main"]
+python_version = 3.12
+strict = true
+
+[[tool.mypy.overrides]]
+module = "*.migrations.*"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "manage"
+ignore_errors = true
+
+[tool.django-stubs]
+django_settings_module = "config.settings.base"
