--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ isort = "^5.13.2"
 mypy = "^1.13.0"
 django-stubs = "^5.1.1"
 psycopg2 = "^2.9.10"
+tokens = "^0.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
