--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ mypy = "^1.13.0"
 django-stubs = "^5.1.1"
 psycopg2 = "^2.9.10"
 tokens = "^0.0.3"
+dj-rest-auth = "^7.0.0"
+djangorestframework-simplejwt = "^5.3.1"
+types-jwt = "^0.1.3"
+djangorestframework-types = "^0.9.0"
 djangorestframework-stubs = "^3.15.1"
 
 
@@ -50,4 +54,6 @@ ignore_errors = true
 
 [tool.django-stubs]
 django_settings_module = "config.settings.base"
+
+
 
