--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dj-rest-auth = "^7.0.0"
 types-jwt = "^0.1.3"
 djangorestframework-simplejwt = "^5.3.1"
 djangorestframework-stubs = "^3.15.1"
+pillow = "^11.0.0"
+pandas = "^2.2.3"
+matplotlib = "^3.9.3"
 
 
 [tool.poetry.group.dev.dependencies]
